Fix dark mode success message

--- a/components/CallToActionInput/SuccessMessage/index.module.scss
+++ b/components/CallToActionInput/SuccessMessage/index.module.scss
@@ -25,16 +25,16 @@
   }
 
   &.dark {
-    background-color: #2C2C2E;
-    box-shadow: 0px 0px 8px rgba(58, 58, 60, 0.75);
+    background-color: #3A3A3C;
+    box-shadow: 0px 0px 8px rgba(58, 58, 60, 0.25);
 
     .header .text {
-      color: rgba(249, 249, 253, 0.7);
+      color: #FFFFFF;
     }
 
     .message {
       color: rgba(249, 249, 253, 0.7);
-      font-weight: 300;
+      font-weight: 500;
     }
   }
 
